# dmat2

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindBLACS.cmake  FindScaLAPACK.cmake
examples/: CMakeLists.txt  scf_step.f90
src/: CMakeLists.txt  Makefile  blacs_interfaces.f90  ks_array_module.f90  ks_matrix_module.f90  main.f90  matrix.f90  matrix_mapping.f90  numbers.f90  numbers_dmat2.f90  proc_mapping.f90  replicated_1d_container.f90  replicated_2d_container.f90  replicated_container.f90  replicated_scalar_container.f90  results_container.f90  scalapack_interfaces.f90
tests/: CMakeLists.txt  add_tests.f90  diag_tests.f90  ks_add_tests.f90  ks_diag_tests.f90  ks_extract_tests.f90  ks_multiply_tests.f90  ks_subtract_tests.f90  ks_unary_tests.f90  main.f90  multiply_tests.f90  subtract_tests.f90  test_params.f90
tools/: CMakeLists.txt  dmat2.md  gen-doc.sh
